# FBGL

./: .gitignore  CMakeLists.txt
Shader/: basic.frag  basic.vert
cmake/: ClangFormat.cmake  ClangTidy.cmake  CompileGLEWLib.cmake  CompilerWarnings.cmake  Sanitizer.cmake
include/: CMakeLists.txt  FBGL.hpp  FBGL_Export.h  FBGL_Export.hpp  IndexBuffer2D.hpp  Shader.h  Shader.hpp  Texture2D.hpp  VertexBuffer.h  VertexBuffer.hpp  VertexBuffer2D.hpp  defines.h  defines.hpp
src/: CMakeLists.txt  IndexBuffer2D.cpp  Shader.cpp  Texture2D.cpp  VertexBuffer.cpp  VertexBuffer2D.cpp
tests/: CMakeLists.txt  Library_Tests  main.cpp
